fixed hidden field input overlapping main navigation

--- a/wagtail/wagtailimages/static/wagtailimages/scss/add-multiple.scss
+++ b/wagtail/wagtailimages/static/wagtailimages/scss/add-multiple.scss
@@ -5,6 +5,7 @@
 .replace-file-input{
     display:inline-block;
     position:relative;
+    overflow:hidden;
 
     input[type=file]{
         padding:0;
